# AIGame_2025_Abdelbaki_Lang

./: .gitignore  Arbitre.java  CMakeLists.txt  CMakeSettings.json  README.md  Rules2025.txt  main.cpp
build_linux/: AIGame_2025_Abdelbaki_Lang  CMakeCache.txt  Makefile  cmake_install.cmake
include/: Board.h  Bot.h  BotIDDFS.h  BotIDDFS_Old.h  Color.h  Field.h  Game.h  GameRules.h  MCTS.h  Seed.h  State.h
include/EvaluationLogic/: Evaluate.h  MinMax.h  MinMaxIDDFS.h  MinMaxIDDFS_Old.h
referee/: Arbitre.java
src/: Board.cpp  Bot.cpp  BotIDDFS.cpp  Field.cpp  Game.cpp  GameRules.cpp  MCTS.cpp
src/EvaluationLogic/: Evaluate.cpp  MinMax.cpp  MinMaxIDDFS.cpp  MinMaxIDDFS_Old.cpp
